<resources>
    <string name="app_name">Fratres</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_email">Confirm email</string>
    <string name="privacy">Privacy</string>
    <string name="sign_in">Sign in</string>
    <string name="home">Home</string>
    <string name="wish_list">Wish list</string>
    <string name="message">Messages</string>
    <string name="search_in_freatres">Search in Freatres</string>
    <string name="discription">Discription</string>
    <string name="discriptions">A product description is the marketing copy that explains what a product is and why it’s worth purchasing. The purpose of a product description is to supply customers with important information about the features and benefits of the product so they’re compelled to buy. However, entrepreneurs and marketers alike are susceptible to a common mistake that comes up when writing product descriptions. Even professional copywriters make it sometimes: writing product descriptions that simply describe your products. Why is it wrong? Because great product descriptions need to augment your product pages by selling your products to real people, not just acting as back-of-the-box dispensers of information for search engines (though search engine optimization can\'t be an afterthought, of course).</string>
    <string name="titledata">Celebraty Kabir Singh Sunglasses Brand Design Eye Sun Glasses Classic Men Sunglasses geniun metal best quality</string>
    <string name="sub">-</string>
</resources>