<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:background="@drawable/skipbuttton"
                android:includeFontPadding="false"
                android:text="Skip"
                android:textAllCaps="false"
                android:textColor="#454545" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:hint="Email"
                    android:textColorHint="#636363"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textColor="@color/black" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/LoginTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="Password"
                    android:textColorHint="#656363"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_your_password"
                android:textColor="#4E4D4D" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="end"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:onClick="loggedIn"
                android:background="@drawable/ic_loginbutton"
                android:backgroundTint="@color/Purple"
                android:foreground="?android:attr/selectableItemBackground" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textDont"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="end"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textsingup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="end"
                    android:layout_toEndOf="@+id/textDont"
                    android:onClick="SingUp"
                    android:paddingLeft="5dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/Purple"
                    android:textSize="15sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <View
                    android:id="@+id/view1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="4"
                    android:background="@color/dullblack" />

                <TextView
                    android:id="@+id/text23"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="OR"
                    android:textColor="@color/dullblack"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="4"
                    android:background="@color/dullblack" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="35dp"
                        android:background="@drawable/ic_icons8_facebook_circled"
                        android:foreground="?android:attr/selectableItemBackground" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginEnd="35dp"
                        android:background="@drawable/ic_google_icon"
                        android:foreground="?android:attr/selectableItemBackground" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginEnd="35dp"
                        android:background="@drawable/ic_instagram_2_1"
                        android:foreground="?android:attr/selectableItemBackground" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:background="@drawable/ic_twitter_4"
                        android:foreground="?android:attr/selectableItemBackground" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

</ScrollView>